--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "connect-redis": "^5.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
@@ -15,6 +16,8 @@
     "jade": "~1.11.0",
     "line-reader": "^0.4.0",
     "morgan": "^1.9.1",
-    "node-resque": "^9.0.0"
+    "multer": "^1.4.2",
+    "node-resque": "^9.0.0",
+    "redis": "^3.1.2"
   }
 }
