--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - 6379:6379
     volumes:
       - redis_volume
+    networks:
+      - crawler
   web-crawler:
     container_name: crawler 
     build: ./
@@ -18,6 +20,12 @@ services:
     ports:
       - 3000:3000
     env_file: .env
+    networks:
+      - crawler
 
 volumes:
   redis_volume:
+
+networks:
+  crawler:
+    name: crawler-network
